templates/deployment.yaml
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: fe-deploy 
  labels: 
    name: fe-deploy 
    app: bc16-app 
spec: 
  selector: 
    matchLabels: 
      name: frontend-pod 
      app: bc16-app 
  template: 
    metadata:
      name: frontend-pod
      labels:
        name: frontend-pod
        app: bc16-app
    spec:
      containers:
      - name: frontend
        image: sharansripada/fe_jenkins
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-deploy
  labels:
    name: job-deploy
    app: bc16-app
spec:
  selector:
    matchLabels:
      name: job-pod
      app: bc16-app
  template:
    metadata:
      name: job-pod
      labels:
        name: job-pod
        app: bc16-app
    spec:
      containers:
      - name: job
        image: sharansripada/job_jenkins
        ports:
          - containerPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: org-deploy
  labels:
    name: org-deploy
    app: bc16-app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: org-pod
      app: bc16-app
  template:
    metadata:
      name: org-pod
      labels:
        name: org-pod
        app: bc16-app
    spec:
      containers:
      - name: org
        image: sharansripada/org_jenkins
        ports:
        - containerPort: 8081
---
apiVersion: apps/v1 
kind: StatefulSet
metadata:
  name: postgres-deploy 
  labels: 
    name: postgres-deploy 
    app: bc16-app 
spec: 
  serviceName: db
  selector: 
    matchLabels: 
      name: postgres-pod 
      app: bc16-app 
  template: 
    metadata: 
      name: postgres-pod 
      labels: 
        name: postgres-pod 
        app: bc16-app 
    spec: 
      containers: 
      - name: postgres 
        image: postgres 
        ports: 
          - containerPort: 5432 
        volumeMounts:
            - name: my-pv
              mountPath: /var/lib/postgresql/data
      volumes:
      - name: my-pv
        persistentVolumeClaim:
          claimName: bc16-pvc
