templates/service.yaml
---
apiVersion: v1 
kind: Service 
metadata: 
  name: fe-service 
  labels: 
    name: fe-service
    app: bc16-app 
spec: 
  ports: 
    - port: 80
      targetPort: 80
  selector: 
    name: frontend-pod 
    app: bc16-app
---
apiVersion: v1
kind: Service
metadata:
  name: job-service
  labels:
    name: job-service
    app: bc16-app
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    name: job-pod
    app: bc16-app
---
apiVersion: v1
kind: Service
metadata:
  name: organization-service
  labels:
    name: organization-service
    app: bc16-app
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    name: org-pod
    app: bc16-app
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: postgres-service
    app: bc16-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: postgres-pod
    app: bc16-app
