templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bc16-ingress-fe
  namespace: bc16
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-service
            port:
              number: 80
  ingressClassName: nginx-bc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bc16-ingress-be
  namespace: bc16
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: (/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: job-service
            port:
              number: 8082
      - path: /api/v1/organizations/
        pathType: Prefix
        backend:
          service:
            name: organization-service
            port:
              number: 8081
  ingressClassName: nginx-bc
